<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="icon">Icon</string>
    <string name="app_name">Lessons Schedule</string>
    <!-- Title bars -->
    <string name="action_settings">Settings</string>
    <string name="lessonsTitle">Lessons</string>
    <string name="settingsTitle">Settings</string>
    <!-- Settings cat names -->
    <string name="editTable">Edit lessons table</string>
    <string name="editTableDesc">Configure table of lessons</string>
    <string name="editTimes">Edit lesson time</string>
    <string name="editTimesDesc">Setup lessons start/end time</string>
    <string name="editNames">Edit lessons names</string>
    <string name="editNamesDesc">Edit names of lessons</string>
    <string name="notification">Notification</string>
    <string name="day_back">Day back</string>
    <!-- About info -->
    <string name="edit_times">Edit times</string>
    <string name="sym_1" translatable="false">1</string>
    <string name="delete_this_time">Delete this time</string>
    <string name="cancel">Cancel</string>
    <string name="reset_defaults">Reset defaults</string>
    <string name="ok" translatable="false">OK</string>
    <string name="times_wipe_msg">All your times will be removed and replaced with default table.</string>
    <string name="times_wipe_title">Restore default times?</string>
    <string name="edit_names">Edit names</string>
    <string name="input_lesson_name">Lesson name</string>
    <string name="table_num_demo" translatable="false">1 12:00</string>
    <string name="table_edit">Edit table</string>
    <string name="null_list_item">Nothing</string>
    <string name="clean">Remove</string>

    <string name="day_1">Monday</string>
    <string name="day_2">Tuesday</string>
    <string name="day_3">Wednesday</string>
    <string name="day_4">Thursday</string>
    <string name="day_5">Friday</string>
    <string name="day_6">Saturday</string>
    <string name="day_7">Sunday</string>

    <string name="end_time_demo">End time: 09:00</string>
    <string name="start_time_demo">Start time: 08:20</string>
    <string name="configure_times">Configure times:</string>

    <string name="start_time_ph">Start time: %1$s</string>
    <string name="end_time_ph">End time: %1$s</string>
    <string name="enter_lesson_name">Enter lesson name:</string>
    
    <string name="weekend_edit">Select weekend</string>
    <string name="weekend_off">Hide weekend days</string>
    <string name="weekend_1">Show sunday</string>
    <string name="weekend_2">Show sunday and saturday</string>
    <string name="about_version">Alpha preview version</string>
    <string name="about_author">Developed by Michael Bergen</string>
    <string name="changelog">Changelog</string>
    <string name="logo_name">Application logo</string>
    <string name="content_conf">Content configuration</string>
    <string name="section_border">Border</string>
    <string name="restore_names_title">Restore default lesson names?</string>
    <string name="restore_names_desc">All your names will be removed and replaced with defaults for your localization.</string>

    <string name="status_no_lessons">No lessons today</string>
    <string name="status_time_to_left">%1$s left after %2$d minutes</string>
    <string name="status_time_to_start">%1$s starts after %2$d minutes</string>
    <string name="status_complete">All lessons complete</string>
    <string name="status_error">Status check error</string>
    <string name="current_lesson">Current lesson</string>
    <string name="new_version">New version can de downloaded. Do it now? (New version code %1$d)</string>
    <string name="share">Share table</string>
    <string name="send_to">Share schedule with:</string>
    <string name="share_info">Share a very big link to your table. You don\'t need network to import schedule.</string>
    <string name="import_error">Import error</string>
    <string name="import_ok">Shared schedule import complete.</string>

    <string-array name="lesson_names_def" tools:ignore="InconsistentArrays">
        <item>Algebra</item>
        <item>Geometry</item>
        <item>Language</item>
        <item>Geography</item>
        <item>Mathematics</item>
        <item>Biology</item>
        <item>PE</item>
        <item>Literature</item>
        <item>Drawing</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Informatics</item>
        <item>Foreign language</item>
        <item>History</item>
        <item>Social studies</item>
        <item>Technology</item>
    </string-array>
</resources>

