<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/editTable"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/list_item"
            android:clickable="true" android:focusable="true">

            <TextView
                android:text="@string/editTable"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginEnd="16dp" android:layout_marginStart="72dp" android:layout_marginTop="16dp"
                android:textSize="16sp" android:textStyle="bold" />

            <TextView
                android:text="@string/editTableDesc"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginEnd="16dp"
                android:layout_marginStart="72dp" android:layout_marginTop="40dp" android:layout_marginBottom="20dp"
                android:textSize="12sp" />

            <ImageView
                android:src="@drawable/ic_today_black_24dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="true"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:contentDescription="@string/icon"
                android:tint="@color/colorAccent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editTimes"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/list_item"
            android:clickable="true" android:focusable="true">

            <TextView
                android:text="@string/editTimes"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginEnd="16dp" android:layout_marginStart="72dp" android:layout_marginTop="16dp"
                android:textSize="16sp" android:textStyle="bold" />

            <TextView
                android:text="@string/editTimesDesc"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginEnd="16dp"
                android:layout_marginStart="72dp" android:layout_marginTop="40dp" android:layout_marginBottom="20dp"
                android:textSize="12sp" />

            <ImageView
                android:src="@drawable/ic_access_time_black_24dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="true"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:contentDescription="@string/icon"
                android:tint="@color/colorAccent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editNames"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/list_item"
            android:clickable="true" android:focusable="true">

            <TextView
                android:text="@string/editNames"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginEnd="16dp" android:layout_marginStart="72dp" android:layout_marginTop="16dp"
                android:textSize="16sp" android:textStyle="bold" />

            <TextView
                android:text="@string/editNamesDesc"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginEnd="16dp"
                android:layout_marginStart="72dp" android:layout_marginTop="40dp" android:layout_marginBottom="20dp"
                android:textSize="12sp" />

            <ImageView
                android:src="@drawable/ic_list_black_24dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="true"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:contentDescription="@string/icon"
                android:tint="@color/colorAccent" />

        </RelativeLayout>

        <!-- ==================== -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/weekend_edit"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/set_weekend_0"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true" android:focusable="true"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hapticFeedbackEnabled="false"
                android:text="@string/weekend_off" />

            <RadioButton
                android:id="@+id/set_weekend_1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true" android:focusable="true"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/weekend_1" />

            <RadioButton
                android:id="@+id/set_weekend_2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true" android:focusable="true"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/weekend_2" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>



