<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        android:background="@drawable/list_item"
        android:textColor="#000"
        android:id="@+id/weekend_0"
        android:text="@string/weekend_off"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        android:background="@drawable/list_item"
        android:textColor="#000"
        android:id="@+id/weekend_1"
        android:text="@string/weekend_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        android:background="@drawable/list_item"
        android:textColor="#000"
        android:id="@+id/weekend_2"
        android:text="@string/weekend_2"/>

</LinearLayout>