<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/white"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/table_num_demo"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:id="@+id/num_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:id="@+id/name_text"/>

    <ImageView
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:tint="@color/lightGrey"
        android:src="@drawable/circle"
        android:visibility="invisible"
        android:id="@+id/active_flag"
        android:contentDescription="@string/current_lesson" />

</LinearLayout>