<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/section">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notifications_black_24dp"
            android:tint="@color/colorAccent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/note_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="16sp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white">

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="64dp"
            android:layout_height="56dp"
            android:id="@+id/day_back"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:contentDescription="@string/day_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:id="@+id/text_weekday"
            android:layout_marginTop="18dp"
            android:textAlignment="center"/>

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="64dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:id="@+id/day_next"
            android:contentDescription="@string/day_back"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_rv"/>

</LinearLayout>