<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:background="@drawable/list_item">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/circle"
        android:layout_margin="8dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/sym_1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:id="@+id/text_number"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:id="@+id/text_name"
        android:text="@string/app_name"/>

    <ImageButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/delete_this_time"
        android:src="@drawable/ic_delete_black_24dp"
        android:id="@+id/btn_remove"
        android:clickable="true"
        android:tint="#ccc"
        android:focusable="true" />

</RelativeLayout>

